--- a/qodana.yaml
+++ b/qodana.yaml
@@ -28,8 +28,4 @@ projectJDK: 21 #(Applied in CI/CD pipeline)
 #  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
 
 #Specify Qodana linter for analysis (Applied in CI/CD pipeline)
-linter: "jetbrains/qodana-jvm:latest\r"
-exclude:
-  - name: All
-    paths:
-      - src
+linter: jetbrains/qodana-jvm:latest
