--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>TouristGuide</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>TouristGuide2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>TouristGuide</name>
-    <description>TouristGuide</description>
+    <name>TouristGuide2</name>
+    <description>TouristGuide2</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -31,6 +31,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
